# AGE_nt

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FUTURE_WORK.md  HACKATHON_BRIEF.md  JSON_SCHEMA_REFERENCE.md  PITCH_SLIDE_PROMPTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
data/: bryan_johnson.json  interventions.json  seed_log.txt  seed_summary.json
data/biotech_profiles/: altos_labs.json  bioage_labs.json  calico.json  cambrian_bio.json  cellarity.json  deciduous_therapeutics.json  dorian_therapeutics.json  fauna_bio.json  genflow_biosciences.json  hevolution_foundation.json  juvena_therapeutics.json  life_biosciences.json  longevity_biotech_fellowship.json  loyal.json  newlimit.json  oisin_biotechnologies.json  rejuvenate_bio.json  retro_bio.json  rubedo_life_sciences.json  senolytic_therapeutics.json  sens_research_foundation.json  shift_bio.json  tornado_therapeutics.json  turn_bio.json  unity_biotechnology.json
data/classifications/: 17-alpha-estradiol.json  acarbose.json  alpha-ketoglutarate.json  aspirin.json  berberine.json  caloric restriction.json  canagliflozin.json  cd38 inhibitors.json  cold exposure.json  coq10.json  curcumin.json  dasatinib quercetin.json  deprenyl.json  epigenetic clocks.json  epigenetic reprogramming.json  everolimus.json  exercise.json  fisetin.json  foxo4-dri.json  gdf11.json  glp-1 agonists.json  glycine.json  hyperbaric oxygen therapy.json  ketogenic diet.json  klotho.json  lithium.json  metformin.json  methylene blue.json  nad+ precursors.json  navitoclax.json  niacin.json  nmn.json  nr.json  omega-3 fatty acids.json  pioglitazone.json  quercetin.json  rapamycin.json  resveratrol.json  sauna.json  senolytics.json  (+12 more)
data/documents/: 17-alpha-estradiol.json  acarbose.json  alpha-ketoglutarate.json  aspirin.json  berberine.json  caloric restriction.json  canagliflozin.json  cd38 inhibitors.json  cold exposure.json  coq10.json  curcumin.json  dasatinib quercetin.json  deprenyl.json  epigenetic clocks.json  epigenetic reprogramming.json  everolimus.json  exercise.json  fisetin.json  foxo4-dri.json  gdf11.json  glp-1 agonists.json  klotho.json  (+30 more)
frontend/: index.html  package-lock.json  package.json
hackai_agentic/: main.py
memory/: architecture_analysis.md
outputs/: hyperbaric oxygen therapy.json  hyperbaric oxygen therapy.md  metformin.json  metformin_gap.json  nmn.json  nmn.md  rapa_ctx.json  rapa_ctx.md  rapa_ctx_clinical_trials_only.json  rapa_ctx_clinical_trials_only.md  rapamycin.json  rapamycin.md  rapamycin_gap.json  report_metformin.html  report_rapamycin.html
scripts/: agent_chat.py  compile_profiles.py  generate_bj_quotes.py  generate_summary.py  llm_api_test.py  precompute_medgemma.py  run_medgemma_confidence.py  run_medgemma_gap_analysis.py  run_medgemma_hype_ratio.py  run_report_pipeline.py  seed_all.py  seed_intervention.py
src/: config.py  main.py
tasks/: confidence_rubric.txt  confidence_rubric_clinical_trials.txt  gap_analysis_rubric.txt  hype_ratio_rubric.txt
tests/: test_sql_and_code_tools.py  test_trajectory.py
(+325 files in other folders)
